--- a/templates/registration/password_reset_done.html
+++ b/templates/registration/password_reset_done.html
@@ -1,7 +1,7 @@
 {% extends 'base.html' %}
 
 {% block content %}
-<div class="container-fluid vh-100" style="background: linear-gradient(to right, #222222, #333333);">
+<div class="container-fluid vh-100" style="background: linear-gradient(45deg, #222222, #555555); min-height: 100vh;">
   <div class="row vh-100 align-items-center justify-content-center">
     <div class="col-md-6">
       <div class="card shadow-lg p-5" style="border-radius: 15px; background-color: rgba(255, 255, 255, 0.8);">
