--- a/templates/competitions/registration_success.html
+++ b/templates/competitions/registration_success.html
@@ -1,7 +1,7 @@
 {% extends 'base.html' %}
 
 {% block content %}
-<div class="container py-5 text-center" style="background: linear-gradient(to right, #4facfe, #00f2fe); min-height: 100vh;">
+<div class="container py-5 text-center" style="min-height: 100vh;">
   <div class="row justify-content-center align-items-center">
     <div class="col-md-8">
       <div class="card shadow-lg border-0" style="border-radius: 20px; background-color: #ffffff;">
