--- a/templates/home.html
+++ b/templates/home.html
@@ -5,7 +5,7 @@
   <div class="row vh-100 align-items-center justify-content-center">
     <div class="col-12 col-md-8 text-center">
       <div class="p-4 text-light">
-        <h1 class="display-4 fw-bold text-shadow-sm">Welcome to Competition Corner</h1>
+        <h1 class="display-4 fw-bold text-shadow-sm">Welcome to Atlas Competition</h1>
         <p class="lead text-shadow-sm">Find your next challenge, connect with athletes, and unleash your strength.</p>
         <div class="d-grid gap-2">
           <a href="{% url 'competitions:competition_list' %}" 
